added great deal of new styling, fixedseveral spacing issues, added new icons with links

--- a/blogtext/text2.html
+++ b/blogtext/text2.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Week Two</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="\styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         h1,
         h2,
@@ -16,6 +17,10 @@
 
         .maintext {
             column-count: 1;
+        }
+
+        .btn {
+            background-color: indigo;
         }
     </style>
 </head>
@@ -65,31 +70,40 @@
         </nav>
         </div>
     </container>
-    
+
     <div class="main">
         <br>
-    <div class="maintext">
-        <h2>Week Two</h2>
-        <br>
-        <p>In general, the second week has, for me, gone more smoothly than
-            the first. Somehow, I felt like I had more time to do what I
-            needed to do. That's not to say it was without stress, but I
-            suppose that's fairly normal when learning and applying new
-            things.<br>
-            The excercise in Pseudocoding proved to be an interesting one.
-            It is a part of the practice of programming that I never knew
-            existed until just recently, though in retrospect it makes a
-            lot of sense that one would try to break up a problem into
-            component parts. I was happy to discover that this logical
-            excercise played to my strengths as a philosophy student, and
-            thereby did not throw me off much at all. It was still a challenge,
-            certainly, but one which I was equipped in advance to handle.<br>
-            Though it did help that I got to pick my project. I always enjoy that.<br>
-            As before, I remain interested to see how new materials
-            will allow us to build on what's already been done.
-        </p>
+        <div class="maintext">
+            <h2>Week Two</h2>
+            <br>
+            <p>In general, the second week has, for me, gone more smoothly than
+                the first. Somehow, I felt like I had more time to do what I
+                needed to do. That's not to say it was without stress, but I
+                suppose that's fairly normal when learning and applying new
+                things.<br>
+                The excercise in Pseudocoding proved to be an interesting one.
+                It is a part of the practice of programming that I never knew
+                existed until just recently, though in retrospect it makes a
+                lot of sense that one would try to break up a problem into
+                component parts. I was happy to discover that this logical
+                excercise played to my strengths as a philosophy student, and
+                thereby did not throw me off much at all. It was still a challenge,
+                certainly, but one which I was equipped in advance to handle.<br>
+                Though it did help that I got to pick my project. I always enjoy that.<br>
+                As before, I remain interested to see how new materials
+                will allow us to build on what's already been done.
+            </p>
+        </div>
     </div>
-    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
