--- a/blogtext/text3.html
+++ b/blogtext/text3.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Week Three</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="\styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         h1,
         h2,
@@ -16,6 +17,10 @@
 
         .maintext {
             column-count: 1;
+        }
+
+        .btn {
+            background-color: indigo;
         }
     </style>
 </head>
@@ -65,35 +70,44 @@
         </nav>
         </div>
     </container>
-    
+
     <div class="main">
         <br>
-    <div class="maintext">
-        <h2>Week Three</h2>
-        <br>
-        <p>So this week started out maybe more stressful than the first. Not sure
-            if it was something in the water or what, but from the end of last week,
-            it seemed as though any confidence had gone straight out of me. <br>
-            Thankfully, I was able to learn (all over again) that asking for help is
-            my best weapon through this process. I think that maybe my biggest
-            challenge is that I'm no longer used to pursuing things past the point of
-            being bad at them, and what I've experienced are the growing pains of
-            growing into that role of student again. Whatever things I've learned in
-            the last few years have mostly been simple and easy to get used to. Hard
-            things, as I'm relearning, are hard.<br>
-            The hard work is slowly starting to pay off, too. While it's still true
-            that I don't necessarily grasp everything on the first, or even second,
-            attempt, I do grasp more now than I did at the beginning, and I think I'm
-            starting to become used to the idea of experimenting around to find a workable
-            solution to my coding problems. Still, must always remind myself to seek
-            help when I'm driving myself mad. For this week, there are some who certainly
-            have earned a shout-out for their invaluable assistance (they know who they are!).<br>
-            So again I find myself in the position of saying that, having wanted to quit,
-            I'm once more glad that I did not. And not to sound too egomaniacal, but I'm
-            now looking forward to seeing what I can overcome next.
-        </p>
+        <div class="maintext">
+            <h2>Week Three</h2>
+            <br>
+            <p>So this week started out maybe more stressful than the first. Not sure
+                if it was something in the water or what, but from the end of last week,
+                it seemed as though any confidence had gone straight out of me. <br>
+                Thankfully, I was able to learn (all over again) that asking for help is
+                my best weapon through this process. I think that maybe my biggest
+                challenge is that I'm no longer used to pursuing things past the point of
+                being bad at them, and what I've experienced are the growing pains of
+                growing into that role of student again. Whatever things I've learned in
+                the last few years have mostly been simple and easy to get used to. Hard
+                things, as I'm relearning, are hard.<br>
+                The hard work is slowly starting to pay off, too. While it's still true
+                that I don't necessarily grasp everything on the first, or even second,
+                attempt, I do grasp more now than I did at the beginning, and I think I'm
+                starting to become used to the idea of experimenting around to find a workable
+                solution to my coding problems. Still, must always remind myself to seek
+                help when I'm driving myself mad. For this week, there are some who certainly
+                have earned a shout-out for their invaluable assistance (they know who they are!).<br>
+                So again I find myself in the position of saying that, having wanted to quit,
+                I'm once more glad that I did not. And not to sound too egomaniacal, but I'm
+                now looking forward to seeing what I can overcome next.
+            </p>
+        </div>
     </div>
-    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
