--- a/blogtext/text5.html
+++ b/blogtext/text5.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Week Five</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="\styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         h1,
         h2,
@@ -16,6 +17,10 @@
 
         .maintext {
             column-count: 1;
+        }
+
+        .btn {
+            background-color: indigo;
         }
     </style>
 </head>
@@ -65,37 +70,46 @@
         </nav>
         </div>
     </container>
-    
+
     <div class="main">
         <br>
-    <div class="maintext">
-        <h2>Week Five (Full-Time Week One)</h2>
-        <br>
-        <p>The setting makes the difference. I know I've already said it, but the
-            whole work-from-home deal was just not doing it for me. Actually being
-            in the office, and now actually having a bunch of people around as well,
-            is a game-changer. And as I get more comfortable with everyone, everything
-            else seems to be flowing that much smoother.<br>
-            That's not to say things haven't still been challenging, because they have.
-            The weight of the challenge, however, is slowly becoming subsumed by the
-            enjoyment of figuring something out and applying it. Case in point: this week's
-            projects provided a nice mix of creative and logical challenges that overlapped
-            well, and the local network of support made solving the various problems that
-            arose a deal less arduous. Though it was always clear that I should reach out
-            for help if I needed it, I didn't always feel right about seeking guidance.<br>
-            Weirdly, being in-person seems to have taken the ego out of it for me. Id've
-            thought the reverse. <br>
-            I can't go without mentioning the session in the park with Dr. Luke, which was
-            a very positive experience. Having the words to describe my goals in showing
-            up every day makes the hard parts a little easier to put up with. Rather than
-            laboring in the service of some vague potential that's "over there," I now have
-            something more solid to latch onto. <br>
-            I think that about does it for now. I'm looking forward to converting this blog
-            over to bootstrap, and generally getting my hands dirty elsewhere. <br>
-            Until next time.
-        </p>
+        <div class="maintext">
+            <h2>Week Five (Full-Time Week One)</h2>
+            <br>
+            <p>The setting makes the difference. I know I've already said it, but the
+                whole work-from-home deal was just not doing it for me. Actually being
+                in the office, and now actually having a bunch of people around as well,
+                is a game-changer. And as I get more comfortable with everyone, everything
+                else seems to be flowing that much smoother.<br>
+                That's not to say things haven't still been challenging, because they have.
+                The weight of the challenge, however, is slowly becoming subsumed by the
+                enjoyment of figuring something out and applying it. Case in point: this week's
+                projects provided a nice mix of creative and logical challenges that overlapped
+                well, and the local network of support made solving the various problems that
+                arose a deal less arduous. Though it was always clear that I should reach out
+                for help if I needed it, I didn't always feel right about seeking guidance.<br>
+                Weirdly, being in-person seems to have taken the ego out of it for me. Id've
+                thought the reverse. <br>
+                I can't go without mentioning the session in the park with Dr. Luke, which was
+                a very positive experience. Having the words to describe my goals in showing
+                up every day makes the hard parts a little easier to put up with. Rather than
+                laboring in the service of some vague potential that's "over there," I now have
+                something more solid to latch onto. <br>
+                I think that about does it for now. I'm looking forward to converting this blog
+                over to bootstrap, and generally getting my hands dirty elsewhere. <br>
+                Until next time.
+            </p>
+        </div>
     </div>
-    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
