--- a/blogtext/text6.html
+++ b/blogtext/text6.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-    <title>Projects</title>
+    <title>Week Six</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="\styles.css">
     <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
-        /* .special {color: red;} */
         h1,
         h2,
         p {
             text-align: center;
         }
 
-        /* .navbg {
-            background-color: goldenrod;
-        } */
         .maintext {
             column-count: 1;
-        }
-
-        ul {
-            list-style-type: none;
         }
 
         .btn {
@@ -44,22 +35,6 @@
         </div>
     </container>
 
-    <!-- <header>
-        <h1>Mike's Terribly <div class="special">Awful</div> Projects</h1>
-        <h2>Cannot Unsee!</h2>
-    </header> -->
-
-    <!-- <div class="navbg">
-    <nav>
-        <ul>
-            <li><span><a href="index.html"><strong>Home</strong></a></span></li>
-            <li><a href="posts.html"><strong>Posts</strong></a></li>
-            <li><strong>Projects</strong></li>
-            <li><a href= "links.html"><strong>Links</strong></a></li>
-        </ul>    
-    </nav> 
-    </div> -->
-
     <container class="nav pt-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -71,20 +46,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="\index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Go To:
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="posts.html">Posts</a>
+                            <a class="dropdown-item" href="\posts.html">Posts</a>
                             <br>
-                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="\projects.html">Projects</a>
                             <br>
-                            <a class="dropdown-item" href="links.html">Links</a>
+                            <a class="dropdown-item" href="\links.html">Links</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -93,34 +68,16 @@
                 </ul>
             </div>
         </nav>
-        <!--</nav>-->
         </div>
     </container>
 
-
-
     <div class="main">
-        <div class="maintext text-center">
+        <br>
+        <div class="maintext">
+            <h2>Week Six</h2>
             <br>
-            <h3>Projects:</h3>
-            <br>
-            <ul>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/timer/';"><i class="fas fa-stopwatch"></i> Countdown to Doom! (timer)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/digitalclock/';"><i class="fas fa-clock"></i> Clock</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/gallery/';"><i class="fas fa-paint-brush"></i> Gallery (with bonus image!)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/splash-page/';"><i class="fab fa-firefox"></i> Splash Page</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/silly-story/';"><i class="fas fa-book"></i> Silly Story Generator (with bonus content!)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/structure-asst./';"><i class="far fa-building"></i> Structure (bugged)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://github.com/mgaren01/pseudocode/blob/master/pseudocode.md';"><i class="fas fa-project-diagram"></i> Pseudocode</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/markup-asst./';"><i class="fas fa-highlighter"></i> Markup</button></li>
-            </ul>
+            <p>
+            </p>
         </div>
     </div>
         <footer>
@@ -132,6 +89,7 @@
             </ul>
         </footer>
     
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
