--- a/posts.html
+++ b/posts.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
-    <title>Mike's Truly Awful Posts</title>
+    <title>Posts</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         /* .special {color: red;} */
         h1,
@@ -20,7 +21,8 @@
             background-color: crimson;
         }
 
-        .card-title, .card-text {
+        .card-title,
+        .card-text {
             color: gold;
         }
 
@@ -97,63 +99,73 @@
     </container>
 
 
-<div class="main">
-    <br>
-    <div class="row text-center">
-        <div class="col-6 text-center">
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week One</h5>
-                    <p class="card-text">So it begins</p>
-                    <a href="blogtext/text1.html" class="btn btn-primary">Go</a>
+    <div class="main">
+        <br>
+        <div class="row text-center">
+            <div class="col-6 text-center">
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week One</h5>
+                        <p class="card-text">So it begins</p>
+                        <a href="blogtext/text1.html" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Three</h5>
+                        <p class="card-text">Trials and Tribulations</p>
+                        <a href="blogtext/text3.html" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Five</h5>
+                        <p class="card-text">The Beginning of the Middle</p>
+                        <a href="blogtext/text5.html" class="btn btn-primary">Go</a>
+                    </div>
                 </div>
             </div>
-<br>
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week Three</h5>
-                    <p class="card-text">Trials and Tribulations</p>
-                    <a href="blogtext/text3.html" class="btn btn-primary">Go</a>
-                </div>
-            </div>
-<br>
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week Five</h5>
-                    <p class="card-text">The Beginning of the Middle</p>
-                    <a href="blogtext/text5.html" class="btn btn-primary">Go</a>
-                </div>
-            </div>
-        </div>
 
-        <div class="col-6 text-center">
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week Two</h5>
-                    <p class="card-text">Electric Boogaloo</p>
-                    <a href="blogtext/text2.html" class="btn btn-primary">Go</a>
+            <div class="col-6 text-center">
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Two</h5>
+                        <p class="card-text">Electric Boogaloo</p>
+                        <a href="blogtext/text2.html" class="btn btn-primary">Go</a>
+                    </div>
                 </div>
-            </div>
-<br>
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week Four</h5>
-                    <p class="card-text">The End of the Beginning</p>
-                    <a href="blogtext/text4.html" class="btn btn-primary">Go</a>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Four</h5>
+                        <p class="card-text">The End of the Beginning</p>
+                        <a href="blogtext/text4.html" class="btn btn-primary">Go</a>
+                    </div>
                 </div>
-            </div>
-<br>
-            <div class="card mx-auto" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Week Six</h5>
-                    <p class="card-text">Error 404: Future not found.</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Six</h5>
+                        <p class="card-text">Error 404: Future not found.</p>
+                        <a href="#" class="btn btn-primary">Go</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <br>
     </div>
-        
-    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
