--- a/blogtext/text1.html
+++ b/blogtext/text1.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Week One</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="\styles.css">
+    <link rel="stylesheet" href="\styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         h1,
         h2,
@@ -16,6 +17,10 @@
 
         .maintext {
             column-count: 1;
+        }
+
+        .btn {
+            background-color: indigo;
         }
     </style>
 </head>
@@ -66,32 +71,41 @@
         </div>
     </container>
 
-<div class="main">
-    <br>
-<div class="maintext">
-    <h2>Week One</h2>
-    <br>
-    <p>The struggle, as they say, is real. If I had to characterize my
-        experience in one word, it would be "stressful." I didn't know
-        what to expect, and generally try to avoid expectations in favor of
-        anticipation, but I was nonetheless thrown somewhat for a loop.<br>
-        That's not necessarily a bad thing, though. It means I've learned
-        the reality of what I'm in for, which means I can now set my
-        expectations accordingly. And this page should be evidence enough
-        that I managed to grasp some programming basics as well.<br>
-        The introductory materials did not disappoint in what they predicted.
-        I did want to quit, a couple different times. But now I'm glad I didn't.
-        The material wasn't as hard as I'd convinced myself it was. And
-        though my page will be far from complete, or even "nice" for that
-        matter, for demo, it is at least a beginning, and I am happy
-        enough with that for now.<br>
-        They say the scariest thing for artists and writers is a blank page.
-        I think the same thing is true for programming. Having now put pen
-        to paper, if you will, the hardest part is done. I look forward to
-        learning more, the better to build on this beginning.
-    </p>
-</div>
-</div>
+    <div class="main">
+        <br>
+        <div class="maintext">
+            <h2>Week One</h2>
+            <br>
+            <p>The struggle, as they say, is real. If I had to characterize my
+                experience in one word, it would be "stressful." I didn't know
+                what to expect, and generally try to avoid expectations in favor of
+                anticipation, but I was nonetheless thrown somewhat for a loop.<br>
+                That's not necessarily a bad thing, though. It means I've learned
+                the reality of what I'm in for, which means I can now set my
+                expectations accordingly. And this page should be evidence enough
+                that I managed to grasp some programming basics as well.<br>
+                The introductory materials did not disappoint in what they predicted.
+                I did want to quit, a couple different times. But now I'm glad I didn't.
+                The material wasn't as hard as I'd convinced myself it was. And
+                though my page will be far from complete, or even "nice" for that
+                matter, for demo, it is at least a beginning, and I am happy
+                enough with that for now.<br>
+                They say the scariest thing for artists and writers is a blank page.
+                I think the same thing is true for programming. Having now put pen
+                to paper, if you will, the hardest part is done. I look forward to
+                learning more, the better to build on this beginning.
+            </p>
+        </div>
+    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
