--- a/blogtext/text4.html
+++ b/blogtext/text4.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Week Four</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="\styles.css">
+    <script src="https://kit.fontawesome.com/9aa13ba559.js" crossorigin="anonymous"></script>
     <style>
         h1,
         h2,
@@ -16,6 +17,10 @@
 
         .maintext {
             column-count: 1;
+        }
+
+        .btn {
+            background-color: indigo;
         }
     </style>
 </head>
@@ -65,38 +70,47 @@
         </nav>
         </div>
     </container>
-    
+
 
     <div class="main">
         <br>
-    <div class="maintext">
-        <h2>Week Four</h2>
-        <br>
-        <p>This has been a much better week. After a rocky start on Monday,
-            I rediscovered the benefits of actually being on-site, and the
-            immediacy of assistance. It's probably not exaggerating by much
-            at all to suggest that I may not have completed my projects this
-            week if I had not left the house. Thankfully, it seems to be finally
-            sinking in for me that help is not only available, but is desirable
-            to seek out.<br>
-            Now that my work and support habits/needs are more in order, it's a
-            deal easier to have a little fun. I still find javascript to be a
-            bit of a pain, but I suppose that's to be expected when learning
-            a new language in tandem with a new way to structure one's
-            thinking. It being a pain does not, however, suggest that I'm not
-            starting to get it; while, starting out, it was easy enough to
-            identify an individual expression, now it's getting easier to identify
-            what the expression is <em>saying</em>. And not to beat a dead horse,
-            but I would probably not be where I am without help (which I reiterate
-            mostly for my own benefit). <br>
-            I'm happy to say that I have very few misgivings about going forward
-            into full-time. I eagerly anticipate a larger one-to-one environment,
-            with lots of people to bounce ideas off of and generally collaborate
-            with. <br>
-            See you next week!
-        </p>
+        <div class="maintext">
+            <h2>Week Four</h2>
+            <br>
+            <p>This has been a much better week. After a rocky start on Monday,
+                I rediscovered the benefits of actually being on-site, and the
+                immediacy of assistance. It's probably not exaggerating by much
+                at all to suggest that I may not have completed my projects this
+                week if I had not left the house. Thankfully, it seems to be finally
+                sinking in for me that help is not only available, but is desirable
+                to seek out.<br>
+                Now that my work and support habits/needs are more in order, it's a
+                deal easier to have a little fun. I still find javascript to be a
+                bit of a pain, but I suppose that's to be expected when learning
+                a new language in tandem with a new way to structure one's
+                thinking. It being a pain does not, however, suggest that I'm not
+                starting to get it; while, starting out, it was easy enough to
+                identify an individual expression, now it's getting easier to identify
+                what the expression is <em>saying</em>. And not to beat a dead horse,
+                but I would probably not be where I am without help (which I reiterate
+                mostly for my own benefit). <br>
+                I'm happy to say that I have very few misgivings about going forward
+                into full-time. I eagerly anticipate a larger one-to-one environment,
+                with lots of people to bounce ideas off of and generally collaborate
+                with. <br>
+                See you next week!
+            </p>
+        </div>
     </div>
-    </div>
+        <footer>
+            <ul class="mt-2">
+                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+            </ul>
+        </footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
