added more cards, bringing site more in line with overall template

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     Please enjoy your stay on my site!   
                 </p>
             </div>
-            <div class="col-6 text-center">
+            <div class="col-6 text-center ml-3">
                 <br>
                 <p>Provided for your entertainment: one of my new favorite bands.  They come
                     with my highest recommendation, and I can virtually guarantee you've never
