--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,10 @@
         .btn {
             background-color: indigo;
         }
+
+        .card {
+            background-color: crimson;
+        }
     </style>
 </head>
 
@@ -102,36 +106,55 @@
     <div class="main">
         <div class="maintext text-center">
             <br>
-            <h3>Projects:</h3>
+            <div class="card mx-auto" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Projects:</h5>
+                    <ul>
+                        <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/timer/';"><i
+                                    class="fas fa-stopwatch"></i> Countdown to Doom! (timer)</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://mgaren01.github.io/digitalclock/';"><i
+                                    class="fas fa-clock"></i> Clock</button></li>
+                        <br>
+                        <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/gallery/';"><i
+                                    class="fas fa-paint-brush"></i> Gallery (with bonus image!)</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://mgaren01.github.io/splash-page/';"><i
+                                    class="fab fa-firefox"></i> Splash Page</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://mgaren01.github.io/silly-story/';"><i
+                                    class="fas fa-book"></i> Silly Story Generator (with bonus content!)</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://mgaren01.github.io/structure-asst./';"><i
+                                    class="far fa-building"></i> Structure (bugged)</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://github.com/mgaren01/pseudocode/blob/master/pseudocode.md';"><i
+                                    class="fas fa-project-diagram"></i> Pseudocode</button></li>
+                        <br>
+                        <li><button class="btn"
+                                onclick="window.location.href='https://mgaren01.github.io/markup-asst./';"><i
+                                    class="fas fa-highlighter"></i> Markup</button></li>
+
+                    </ul>
+                </div>
+            </div>
             <br>
-            <ul>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/timer/';"><i class="fas fa-stopwatch"></i> Countdown to Doom! (timer)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/digitalclock/';"><i class="fas fa-clock"></i> Clock</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/gallery/';"><i class="fas fa-paint-brush"></i> Gallery (with bonus image!)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/splash-page/';"><i class="fab fa-firefox"></i> Splash Page</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/silly-story/';"><i class="fas fa-book"></i> Silly Story Generator (with bonus content!)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/structure-asst./';"><i class="far fa-building"></i> Structure (bugged)</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://github.com/mgaren01/pseudocode/blob/master/pseudocode.md';"><i class="fas fa-project-diagram"></i> Pseudocode</button></li>
-                <br>
-                <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/markup-asst./';"><i class="fas fa-highlighter"></i> Markup</button></li>
-            </ul>
         </div>
     </div>
-        <footer>
-            <ul class="mt-2">
-                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
-                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
-                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
-                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
-            </ul>
-        </footer>
-    
+    <footer>
+        <ul class="mt-2">
+            <li><button class="btn"><i class="fab fa-github-square fa-2x"></i></button></li>
+            <li><button class="btn"><i class="fab fa-linkedin fa-2x"></i></button></li>
+            <li><button class="btn"><i class="fas fa-exclamation-circle fa-2x"></i></button></li>
+            <li><button class="btn"><i class="fas fa-crown fa-2x"></i></button></li>
+        </ul>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
